src/test/ui/rfc-2632-const-trait-impl/hir-const-check.stderr
error[E0658]: `match` is not allowed in a `const fn`
  --> $DIR/hir-const-check.rs:12:9
   |
LL |         match *self {}
   |         ^^^^^^^^^^^^^^
   |
   = note: see issue #49146 <https://github.com/rust-lang/rust/issues/49146> for more information
   = help: add `#![feature(const_if_match)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
